package org.mark.chess.swing;

import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.experimental.Accessors;
import org.jetbrains.annotations.NotNull;
import org.mark.chess.board.Field;
import org.mark.chess.board.backgroundcolor.BackgroundColorRulesEngine;
import org.mark.chess.piece.PieceType;
import org.mark.chess.player.PlayerColor;

import javax.imageio.ImageIO;
import javax.swing.ImageIcon;
import javax.swing.JButton;
import java.awt.Image;
import java.io.IOException;
import java.util.Objects;

import static org.mark.chess.player.PlayerColor.WHITE;

/**
 * Contains front-end field related methods.
 */
@Data
@EqualsAndHashCode(callSuper = true)
@Accessors(chain = true)
public final class FrontendField extends JButton {

    public static final  int    FIELD_WIDTH_AND_HEIGHT = 75;
    private static final String EXTENSION              = ".png";

    private static final int                        MAXIMUM_FIELD_ID           = 63;
    private static final String                     UNDERSCORE                 = "_";
    private static final BackgroundColorRulesEngine backgroundColorRulesEngine = new BackgroundColorRulesEngine();

    private int    id;
    private String iconPath;

    /**
     * Constructor for the front-end field.
     *
     * @param frontendChessboard The front-end chessboard.
     * @param field              A back-end field.
     */
    public FrontendField(FrontendChessboard frontendChessboard, @NotNull Field field) {
        this.setText(String.valueOf(field.getCode()));
        this.setBounds(field.getCoordinates().getX() * FIELD_WIDTH_AND_HEIGHT,
                field.getCoordinates().getY() * FIELD_WIDTH_AND_HEIGHT,
                FIELD_WIDTH_AND_HEIGHT,
                FIELD_WIDTH_AND_HEIGHT);
        this.addActionListener(frontendChessboard);
        this.addMouseListener(frontendChessboard);
        this.setBackground(backgroundColorRulesEngine.process(field));
        this.update(field);
    }

    /**
     * Creates a front-end field id.
     *
     * @param humanPlayerColor The piece-type color with which the human plays.
     * @param fieldId          The back-end field id.
     * @return The front-end field id.
     */
    public static int createButtonId(PlayerColor humanPlayerColor, int fieldId) {
        return humanPlayerColor == WHITE ? fieldId : (MAXIMUM_FIELD_ID - fieldId);
    }

    /**
     * Reset the front-end field.
     *
     * @param field A back-end field.
     * @return The front-end field.
     */
    public FrontendField reset(@NotNull Field field) {
        this.setText(field.getCode());
        this.setIcon(null);

        return this;
    }

    /**
     * Initializes the front-end field.
     *
     * @param field The back-end field.
     * @return The front-end field.
     */
    public FrontendField update(@NotNull Field field) {
        this.id = field.getId();

        if (field.getPieceType() == null) {
            return this;
        }

        try {
            this.setText(null);
            this.setIcon(new ImageIcon(getResource(createIconPath(field.getPieceType(), field.getPieceType().getColor()))
                    .getImage()
                    .getScaledInstance(FIELD_WIDTH_AND_HEIGHT, FIELD_WIDTH_AND_HEIGHT, Image.SCALE_SMOOTH)));
        }
        catch (IOException e) {
            throw new IllegalStateException(e);
        }

        return this;
    }

    private static @NotNull ImageIcon getResource(String iconPath) throws IOException {
        return new ImageIcon(ImageIO.read(Objects.requireNonNull(Thread.currentThread().getContextClassLoader().getResource(iconPath))));
    }

    private String createIconPath(@NotNull PieceType pieceType, @NotNull PlayerColor color) {
        this.iconPath = color.getName() + UNDERSCORE + pieceType.getName() + EXTENSION;

        return this.iconPath;
    }
}
